fix: new word spam

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,3 +17,4 @@ lib_deps =
   adafruit/Adafruit GFX Library
 upload_port = /dev/cu.SLAB_USBtoUART
 monitor_port = /dev/cu.SLAB_USBtoUART
+monitor_speed = 115200
